Oppdater build.gradle.kts (#145)
* Rename til FellesTestOppsett

* Oppdater build.gradle.kts